<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layoutDirection="@string/layout_direction">

    <LinearLayout
        android:id="@+id/lltClearCart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="5dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/civRestImage"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginTop="35dp" />

        <com.obs.CustomTextView
            android:id="@+id/tvContinueWithorder"
            style="@style/ClanProForUBER_News"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/continue_with_order"
            android:textColor="@color/total_text_colur"
            android:textSize="19dp" />


        <com.obs.CustomTextView
            android:id="@+id/tvNameOfTheRestaurant"
            style="@style/ClanProForUBER_News"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/you_still_have_items"
            android:textColor="@color/black1"
            android:textSize="12dp" />


        <RelativeLayout
            android:id="@+id/rltChoice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="25dp"
            android:background="@color/white"
            android:paddingEnd="15dp"
            android:paddingStart="15dp"
            android:paddingTop="15dp">

            <com.obs.CustomButton
                android:id="@+id/btnContinue"
                style="@style/ClanProForUBER_Medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:background="@drawable/ripple_effect"
                android:padding="15dp"
                android:text="@string/continue_text"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="12dp" />

            <com.obs.CustomButton
                android:id="@+id/btnClearCart"
                style="@style/ClanProForUBER_Medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/btnContinue"
                android:background="@drawable/ripple_effect_white"
                android:padding="20dp"
                android:text="@string/clear_basket"
                android:textColor="@color/apptheme"
                android:textSize="12dp" />
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>