<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:layoutDirection="@string/layout_direction"
    tools:context=".views.main.subviews.CashDetailActivity">

    <RelativeLayout
        android:id="@+id/back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:elevation="5dp">

        <ImageView
            android:id="@+id/arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:padding="15dp"
            android:scaleX=".6"
            android:scaleY=".6"
            android:src="@drawable/gobackleftarrow" />


        <com.obs.CustomTextView
            style="@style/ClanProForUBER_Book"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/arrow"
            android:gravity="center_vertical"
            android:text="@string/cash"
            android:textSize="19dp" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/cash_amount_detail_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/back"
        android:layout_marginTop="20dp"
        android:orientation="vertical">


        <com.obs.CustomTextView
            android:id="@+id/title"
            style="@style/ClanProForUBER_Book"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:text="@string/pay_for_orders_with_cash"
            android:textColor="@color/black"
            android:textSize="19dp" />

        <com.obs.CustomTextView
            android:id="@+id/content"
            style="@style/ClanProForUBER_Book"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/descript_cash"
            android:textColor="@color/cash_detail"
            android:textSize="16dp" />
    </LinearLayout>
</RelativeLayout>
