<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layoutDirection="@string/layout_direction"
    android:layout_height="wrap_content"
    android:background="@color/white">

    <RelativeLayout
        android:id="@+id/back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">

        <ImageView
            android:id="@+id/arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:padding="15dp"
            android:scaleX=".9"
            android:scaleY=".9"
            android:src="@drawable/ic_closer"
            android:visibility="visible" />


        <com.obs.CustomTextView
            style="@style/ClanProForUBER_Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:gravity="center_vertical"
            android:padding="15dp"
            android:text="@string/reset"
            android:textSize="14dp"
            app:textAllCaps="true" />
    </RelativeLayout>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/sorting_tabLayout"
        style="@style/MyTabLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/back"
        android:background="@drawable/ripple_effect_white"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:tabSelectedTextColor="@color/black"
        app:tabTextColor="@color/payment_method" />

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viewpager_sort"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_below="@+id/sorting_tabLayout" />

    <View
        android:id="@+id/line1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/viewpager_sort"
        android:background="@color/line_colour" />

    <RelativeLayout
        android:id="@+id/done_lay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/line1">

        <com.obs.CustomButton
            android:id="@+id/done"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:text="@string/done" />
    </RelativeLayout>
</RelativeLayout>